--- a/index.html
+++ b/index.html
@@ -1,7 +1,162 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Srini | Portfolio</title>
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap" rel="stylesheet">
+  <!-- Custom CSS -->
+  <style>
+    body {
+      font-family: 'Poppins', sans-serif;
+      scroll-behavior: smooth;
+    }
+    header {
+      height: 100vh;
+      background: linear-gradient(135deg, #1d2671, #c33764);
+      color: white;
+      text-align: center;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+    }
+    header img {
+      width: 160px;
+      height: 160px;
+      border-radius: 50%;
+      border: 5px solid #fff;
+      margin-bottom: 20px;
+    }
+    section {
+      padding: 60px 20px;
+    }
+    .navbar {
+      background: #1d2671;
+    }
+    .navbar a {
+      color: white !important;
+      font-weight: 500;
+    }
+    .card {
+      transition: transform .2s;
+    }
+    .card:hover {
+      transform: scale(1.05);
+    }
+    footer {
+      background: #1d2671;
+      color: #fff;
+      text-align: center;
+      padding: 20px;
+    }
+  </style>
+</head>
 <body>
-<h1>Hello Srini</h1>
-<p>I'm hosted with GitHub Pages.</p>
+
+<!-- Navbar -->
+<nav class="navbar navbar-expand-lg fixed-top">
+  <div class="container">
+    <a class="navbar-brand text-white fw-bold" href="#">Srini</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
+        <li class="nav-item"><a class="nav-link" href="#skills">Skills</a></li>
+        <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
+        <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
+<!-- Hero Section -->
+<header id="home">
+  <div class="container">
+    <img src="my-photo.jpg" alt="Profile Photo">
+    <h1 class="fw-bold">Hi, I'm Srini 👋</h1>
+    <p class="lead">SharePoint & .NET Architect | Azure | React | AI</p>
+    <a href="#contact" class="btn btn-light btn-lg mt-3">Get in Touch</a>
+  </div>
+</header>
+
+<!-- About -->
+<section id="about" class="bg-light text-center">
+  <div class="container">
+    <h2 class="fw-bold mb-4">About Me</h2>
+    <p class="lead">
+      I’m a technology architect with 14+ years of experience in SharePoint, .NET, Azure, and modern web applications.
+      Passionate about building scalable solutions, mentoring teams, and exploring AI-powered innovation.
+    </p>
+  </div>
+</section>
+
+<!-- Skills -->
+<section id="skills" class="text-center">
+  <div class="container">
+    <h2 class="fw-bold mb-4">Skills</h2>
+    <div class="row">
+      <div class="col-md-3"><div class="card p-3"><h5>SharePoint Online</h5></div></div>
+      <div class="col-md-3"><div class="card p-3"><h5>.NET & C#</h5></div></div>
+      <div class="col-md-3"><div class="card p-3"><h5>Azure Cloud</h5></div></div>
+      <div class="col-md-3"><div class="card p-3"><h5>React / SPFx</h5></div></div>
+    </div>
+  </div>
+</section>
+
+<!-- Projects -->
+<section id="projects" class="bg-light text-center">
+  <div class="container">
+    <h2 class="fw-bold mb-4">Projects</h2>
+    <div class="row">
+      <div class="col-md-4 mb-3">
+        <div class="card shadow">
+          <div class="card-body">
+            <h5 class="card-title">SPARK App</h5>
+            <p class="card-text">React + Redux + REST API app hosted on SharePoint Online.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4 mb-3">
+        <div class="card shadow">
+          <div class="card-body">
+            <h5 class="card-title">Document Security Audit</h5>
+            <p class="card-text">C# Timer Job scanning permissions across SharePoint libraries.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4 mb-3">
+        <div class="card shadow">
+          <div class="card-body">
+            <h5 class="card-title">RAG with SharePoint Data</h5>
+            <p class="card-text">AI-powered search assistant using Azure Cognitive Search.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- Contact -->
+<section id="contact" class="text-center">
+  <div class="container">
+    <h2 class="fw-bold mb-4">Contact Me</h2>
+    <p class="lead">Let’s connect! Reach out via email or LinkedIn.</p>
+    <a href="mailto:youremail@example.com" class="btn btn-primary btn-lg me-3">Email</a>
+    <a href="https://linkedin.com/in/yourprofile" class="btn btn-outline-dark btn-lg">LinkedIn</a>
+  </div>
+</section>
+
+<!-- Footer -->
+<footer>
+  <p>© 2025 Srini | Built with ❤️ using Bootstrap</p>
+</footer>
+
+<!-- Bootstrap JS -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
