Updated email and linked

--- a/index.html
+++ b/index.html
@@ -146,8 +146,8 @@
   <div class="container">
     <h2 class="fw-bold mb-4">Contact Me</h2>
     <p class="lead">Let’s connect! Reach out via email or LinkedIn.</p>
-    <a href="mailto:youremail@example.com" class="btn btn-primary btn-lg me-3">Email</a>
-    <a href="https://linkedin.com/in/yourprofile" class="btn btn-outline-dark btn-lg">LinkedIn</a>
+    <a href="mailto:srini.k16@gmail.com" class="btn btn-primary btn-lg me-3">Email</a>
+    <a href="https://linkedin.com/in/srini-k16" class="btn btn-outline-dark btn-lg">LinkedIn</a>
   </div>
 </section>
 
